# agent-eyes

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/pipelines/: ci.yml  release.yml
.github/scripts/: changelog-extract.sh
.github/workflows/: reusable-build.yml  stage-build.yml  stage-release-publish.yml  stage-test.yml
agent-eyes/: Cargo.toml
agent-eyes/src/: capture.rs  config.rs  describe.rs  diff.rs  dom_diff_coalesce.rs  dom_index.rs  lib.rs  main.rs  mcp_server.rs  phash_cascade.rs  serve.rs  spine.rs  update.rs  verify.rs
agent-eyes/src/vlm/: mod.rs
agent-eyes/src/vlm/llava/: constants.rs  conversation.rs  hub.rs  image_processor.rs  inference.rs  mod.rs  token_stream.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
