[package]
name = "agent-eyes"
version = "0.7.1"
edition = "2021"

[features]
default = []
vlm = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body" }
anyhow = "1"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
candle-core = { version = "0.8.4", optional = true }
candle-nn = { version = "0.8.4", optional = true }
candle-transformers = { version = "0.8.4", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3"
